[gd_scene load_steps=5 format=3 uid="uid://cyl4gg4y6i7mv"]

[ext_resource type="Script" path="res://scenes/ui/canvas.gd" id="1_xaxmr"]
[ext_resource type="PackedScene" uid="uid://b14wos6th44f3" path="res://scenes/ui/buy_bar.tscn" id="2_wxnc2"]
[ext_resource type="PackedScene" uid="uid://bkrs0cguctsi" path="res://scenes/ui/player_tender.tscn" id="3_tapla"]
[ext_resource type="PackedScene" uid="uid://c47pmxfmok6yk" path="res://scenes/ui/default_button.tscn" id="4_hlilr"]

[node name="canvas" type="CanvasLayer" groups=["ui"]]
script = ExtResource("1_xaxmr")

[node name="Ui" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect4" type="ColorRect" parent="Ui"]
z_index = -1
layout_mode = 0
offset_left = 275.0
offset_top = 573.0
offset_right = 455.0
offset_bottom = 704.0
color = Color(0.901961, 0, 0.156863, 1)

[node name="ColorRect5" type="ColorRect" parent="Ui"]
z_index = -1
layout_mode = 0
offset_left = 455.0
offset_top = 573.0
offset_right = 740.0
offset_bottom = 708.0
color = Color(0, 0.635294, 0.443137, 1)

[node name="ColorRect6" type="ColorRect" parent="Ui"]
z_index = -1
layout_mode = 0
offset_left = 738.0
offset_top = 573.0
offset_right = 1016.0
offset_bottom = 709.0
color = Color(0, 0.364706, 1, 1)

[node name="Tenders" type="Control" parent="Ui"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="RedPlayerTender" parent="Ui/Tenders" instance=ExtResource("3_tapla")]
self_modulate = Color(0.898039, 0.545098, 0.486275, 1)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -155.0
offset_right = 125.0
offset_bottom = 0.0
grow_vertical = 0
size_flags_vertical = 8

[node name="BluePlayerTender" parent="Ui/Tenders" instance=ExtResource("3_tapla")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -125.0
offset_top = -155.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 0
grow_vertical = 0

[node name="BuyBar" parent="Ui" instance=ExtResource("2_wxnc2")]
z_index = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
offset_left = 60.0
offset_top = -15.0
offset_right = 60.0
offset_bottom = -15.0
grow_vertical = 0
size_flags_vertical = 8

[node name="Label" type="Label" parent="Ui/BuyBar"]
layout_mode = 0
offset_left = -300.0
offset_top = -85.0
offset_right = -242.0
offset_bottom = -59.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Ranged"

[node name="Label2" type="Label" parent="Ui/BuyBar"]
layout_mode = 0
offset_left = -60.68
offset_top = -85.0
offset_right = -13.68
offset_bottom = -59.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Melee"

[node name="Label3" type="Label" parent="Ui/BuyBar"]
layout_mode = 0
offset_left = 212.11
offset_top = -85.0
offset_right = 274.11
offset_bottom = -59.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Support"

[node name="NextTurnBtn" parent="Ui" instance=ExtResource("4_hlilr")]
layout_mode = 0
offset_right = 86.0
offset_bottom = 31.0
text = "Next Turn"

[node name="GiveUpBtn" parent="Ui" instance=ExtResource("4_hlilr")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -68.0
offset_right = 0.0
offset_bottom = 31.0
grow_horizontal = 0
text = "Give Up"

[node name="Label" type="Label" parent="Ui"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -63.0
offset_right = 63.0
offset_bottom = 26.0
grow_horizontal = 2
text = "Current Player ="

[node name="ToggleButtons" type="VBoxContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 135.0
offset_top = -66.0
offset_right = 270.0
grow_vertical = 0

[node name="CheckButton" type="CheckButton" parent="ToggleButtons"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
button_pressed = true
text = "Show Units"

[node name="CheckButton3" type="CheckButton" parent="ToggleButtons"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
button_pressed = true
text = "Show UI
"

[node name="CheckButton2" type="CheckButton" parent="ToggleButtons"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
button_pressed = true
text = "Show Range
"

[connection signal="button_up" from="Ui/NextTurnBtn" to="." method="_on_next_turn_btn_button_up"]
[connection signal="button_up" from="Ui/GiveUpBtn" to="." method="_on_give_up_btn_up"]
[connection signal="button_up" from="ToggleButtons/CheckButton" to="." method="_on_check_button_button_up"]
[connection signal="pressed" from="ToggleButtons/CheckButton" to="." method="_on_check_button_pressed"]
[connection signal="toggled" from="ToggleButtons/CheckButton3" to="." method="_on_check_button_3_toggled"]
[connection signal="pressed" from="ToggleButtons/CheckButton2" to="." method="_on_check_button_2_pressed"]
